manifest_streamlit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mdpi-streamlit
  labels:
    app: mdpi-streamlit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mdpi-streamlit
  template:
    metadata:
      labels:
        app: mdpi-streamlit
    spec:
      containers:
      - name: mdpi-streamlit
        image: dzmitryashkinadze/mdpi_streamlit:latest
        ports:
        - containerPort: 8501
---
apiVersion: v1
kind: Service
metadata:
  name: mdpi-streamlit-service
spec:
  selector:
    app: mdpi-streamlit
  ports:
    - protocol: TCP
      port: 8501
      targetPort: 8501
  type: NodePort
